# email-service

./: Cargo.toml  Dockerfile  configuration.yaml
.github/workflows/: general.yml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20230908192850_create_subscriptions_table.sql  20231202130017_make_status_not_null_in_subscriptions.sql  20231202131759_create_subscription_tokens_table.sql  20240205215647_seed_user.sql  20240208204118_create_idempotency_table.sql  20240209184414_relax_null_checks_on_idempotency.sql
scripts/: build_docker.sh  init_db.sh  init_redis.sh  run_docker.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: mod.rs  persistance.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscription_confirm.rs  subscriptions.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs  newsletter.rs  password.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: mod.rs
tests/: common.rs  health_check.rs  subscriptions.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
