[package]
name = "email-service"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email-service"

[dependencies]
anyhow = "1.0"
axum = "0.7"
claim = "0.5"
chrono = "0.4"
config = "0.13"
fake = "~2.3"
once_cell = "1.18"
quickcheck = "0.9"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
secrecy = { version = "0.8", features = [ "serde" ] }
serde = { version = "1.0", features = [ "derive" ] }
sqlx = { version = "0.7", features = [
  "runtime-tokio", "macros", "postgres", "uuid", "chrono", "migrate"
] }
validator = "0.16"
tokio = { version = "1.34", features = [ "full" ] }
tower = "0.4"
tower-http = { version = "0.5", features = [ "trace", "request-id", "util" ] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "registry", "env-filter" ] }
tracing-bunyan-formatter = "0.3"
ulid = "1.0"
unicode-segmentation = "1.10"

[dev-dependencies]
serde_json = "1"
wiremock = "0.5"

[profile.release]
strip = true
lto = true
panic = "abort"
